--- a/Nuri/pom.xml
+++ b/Nuri/pom.xml
@@ -201,6 +201,24 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- JSON -->
+		<!-- <dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<classifier>jdk15</classifier>
+			<version>2.4</version>
+		</dependency> -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.2</version>
+		</dependency>
 	
 		<!-- Test -->
 		<dependency>
